Make diagram using tikz

--- a/report.tex
+++ b/report.tex
@@ -1,7 +1,49 @@
 \documentclass{article}
 
 \usepackage{tikz}
-\usetikzlibrary{er,positioning}
+\usetikzlibrary{shapes.multipart}
+\usetikzlibrary{positioning}
+\usetikzlibrary{shadows}
+\usetikzlibrary{er}
+\usetikzlibrary{calc}
+
+\makeatletter
+\pgfarrowsdeclare{crow's foot}{crow's foot}
+{
+  \pgfarrowsleftextend{+-.5\pgflinewidth}%
+  \pgfarrowsrightextend{+.5\pgflinewidth}%
+}
+{
+  \pgfutil@tempdima=0.5pt%
+  \advance\pgfutil@tempdima by.25\pgflinewidth%
+  \pgfsetdash{}{+0pt}%
+  \pgfsetmiterjoin%
+  \pgfpathmoveto{\pgfqpoint{0pt}{-6\pgfutil@tempdima}}%
+  \pgfpathlineto{\pgfqpoint{-6\pgfutil@tempdima}{0pt}}%
+  \pgfpathlineto{\pgfqpoint{0pt}{6\pgfutil@tempdima}}%
+  \pgfusepathqstroke%
+}
+
+
+\tikzset{
+    zig zag to/.style={
+        to path={(\tikztostart) -| ($(\tikztostart)!#1!(\tikztotarget)$) |- (\tikztotarget)}
+    },
+    zig zag to/.default=0.5,
+    one to one/.style={
+      solid
+    },
+    one to many/.style={
+        -crow's foot, solid
+    },
+    many to one/.style={
+        crow's foot-, solid
+    },
+    many to many/.style={
+        crow's foot-crow's foot, solid
+    }
+}
+
 
 \begin{document}
 
