Add title page and update readme

--- a/report.tex
+++ b/report.tex
@@ -44,9 +44,17 @@
     }
 }
 
+\title{Database Design Project}
+\author{
+  Samuel Grahn, samuel.grahn@outlook.com\\
+  Next Person, email@adress.com\\
+}
+
 
 \begin{document}
 
+\maketitle
+\newpage
 \input{diag.tex}
 
 \end{document}
