Added group name

--- a/report.tex
+++ b/report.tex
@@ -48,7 +48,10 @@
 
 \newcommand{\email}[1]{\href{mailto:#1}{#1}}
 
-\title{Database Design Project}
+\title{
+  Database Design Project\\
+  IT 30
+}
 \author{
   Samuel Grahn, \email{samuel.grahn@outlook.com}\\
   Olof Bergenholtz, \email{obergenholtz@gmail.com}\\
