--- a/report.tex
+++ b/report.tex
@@ -65,7 +65,7 @@
 \maketitle
 \newpage
 \section*{ER-diagram}
-\includegraphics[width=\linewidth]{er.png}
+\includegraphics[height=\linewidth,angle=90]{er.png}
 %\input{diag.tex}
 
 \end{document}
