Add the things i forgot

--- a/report.tex
+++ b/report.tex
@@ -30,13 +30,13 @@
 Welcome Text
 \sql{welcome}
 List of top-level departments
-
+\sql{topleveldpt}
 List of featured products
-
+\sql{featured_producs}
 List all keyword-related producs to a product
-
+\sql{similar_products}
 List all products in a given department
-
+TODO
 List all products on sale sorted by discount percentage
-
+TODO
 \end{document}
