Only missing "On Sale", which we need something for.

--- a/report.tex
+++ b/report.tex
@@ -1,3 +1,4 @@
+
 \documentclass{article}
 
 \usepackage{hyperref}
@@ -32,11 +33,11 @@ Welcome Text
 List of top-level departments
 \sql{topleveldpt}
 List of featured products
-\sql{featured_producs}
+\sql{featured_products}
 List all keyword-related producs to a product
 \sql{similar_products}
 List all products in a given department
-TODO
+\sql{dept_products}
 List all products on sale sorted by discount percentage
 TODO
 \end{document}
