--- a/report.tex
+++ b/report.tex
@@ -25,10 +25,10 @@
 \maketitle
 \newpage
 \section*{ER-diagram}
-\includegraphics[height=\linewidth,angle=90]{er.png}
+\includegraphics[width=\linewidth]{index.jpg}
 
 \section*{Generating the Database}
-\sql{table_generation}
+\sql{creation}
 
 \section*{Task 4 Queries}
 Welcome Text
