--- a/report.tex
+++ b/report.tex
@@ -25,11 +25,14 @@
 \maketitle
 \newpage
 \section*{ER-diagram}
-\includegraphics[width=\linewidth]{index.jpg}
+\includegraphics[height=\linewidth,angle=90]{er.png}
 
 \section*{Generating the Database}
 \sql{creation}
 
+\section*{Reverse-engineered Diagram}
+\includegraphics[width=\linewidth]{index.jpg}
+\newpage
 \section*{Task 4 Queries}
 Welcome Text
 \sql{welcome}
